[metadata]
name = Y86_64-Simulator-Noah-Mancino
version = 0.0.1
author = Noah Mancino
author_email = noahdanielmancino@gmail.com
description = A simulation of the Y86_64 ISA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noahmancino/Y86_64-Simulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src